--- a/.github/workflows/daily-cron.yml
+++ b/.github/workflows/daily-cron.yml
@@ -2,7 +2,7 @@ name: Daily Cron Job
 
 on:
   schedule:
-    - cron: "0 0 * * *" # Runs at 00:00 UTC every day
+    - cron: "*/2 * * * *" # Runs at 00:00 UTC every day
   workflow_dispatch: # Allows manual trigger from GitHub UI
 
 jobs:
